# KateelLearningDemosToStudents

./: .gitignore  ADDITIONAL_DEMOS.md  ATTRIBUTION.md  AWESOME_LISTS.md  AWESOME_SUBMISSION_COMMANDS.md  AWESOME_SUBMISSION_GUIDE.md  CONTRIBUTING.md  COURSE_COMPANION_MAP.md  DEMO_INDEX.md  README.md  demo_status.txt  ts_forecast_model.h5
.github/ISSUE_TEMPLATE/: awesome-list-submission.md  bug_feature_report.yml  config.yml  usage_acknowledgment.yml
Assignments/: README.md
Assignments/Session03_CreditRisk/: README.md
Assignments/Session04_FraudDetection/: README.md
Assignments/Session05_Segmentation/: README.md
Assignments/Session10_WealthManagement/: README.md
Assignments/Session13_ModelGovernance/: README.md
Assignments/Session14_ResponsibleAI/: README.md
CourseCatalogs/: AI_ML_Financial_Services_Catalog.md  Cyber_Security_Catalog.md  Management_of_AI_Products_Catalog.md  Public_Policy_Governance_Catalog.md
CourseCatalogs/DataMining/: README.md
CourseCatalogs/NLP/: README.md
CourseCatalogs/PublicPolicyGovernance/: README.md
CourseCatalogs/WealthManagement/: README.md
DomainUseCaseDemos/: KMidTermQPExcelV001.xlsx  LearningExercise001.md  LearningExercise002.md  README.md
TechUseCaseDemos/: README.md
TechUseCaseDemos/PatternMining/demo002/: README.md  ecom_fulldemo.py  ecom_syndata.py  fulldemo.py  main.py  pyproject.toml  requirements.txt  syndata.py  test_ecom_fulldemo.py  test_ecom_syndata.py
wiki-bootstrap/: Attribution-Requirements.md  Home.md  Usage-Registry.md  push-wiki.ps1
🤖 Browser-AI-Demos/: README.md
(+418 files in other folders)
