[project]
name = "demo002"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=15.3.4",
    "matplotlib>=3.5.0",
    "mlxtend>=0.21.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "prefixspan>=0.5.2",
    "seaborn>=0.12.0",
]
